# sealstack

./: .editorconfig  .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CLI-Design.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSL-Parser-Design.md  CSL-Specification.md  Cargo.toml  ContextForge-Plan.md  ContextForge-Scaffolding-Brief.md  ContextForge-vs-Glean-BattleCard.md  GOVERNANCE.md  LICENSE  MCP-Generator-Design.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  TRADEMARK-POLICY.md  TRADEMARKS.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  rust-toolchain.toml
connectors/confluence/: Cargo.toml
connectors/confluence/src/: lib.rs
connectors/github/: Cargo.toml
connectors/github/src/: lib.rs  retry_shim.rs
connectors/github/tests/: list_repos_e2e.rs  retry_shim.rs  retry_shim_e2e.rs
connectors/google-drive/: Cargo.toml
connectors/google-drive/src/: files.rs  lib.rs  permissions.rs  resource.rs  retry_shim.rs
connectors/google-drive/tests/: fetch_body_e2e.rs  list_e2e.rs  list_files_e2e.rs  oauth_refresh.rs  retry_shim.rs  retry_shim_e2e.rs
connectors/jira/: Cargo.toml
connectors/jira/src/: lib.rs
connectors/linear/: Cargo.toml
connectors/linear/src/: lib.rs
connectors/local-files/: Cargo.toml
connectors/local-files/src/: lib.rs
connectors/notion/: Cargo.toml
connectors/notion/src/: lib.rs
connectors/postgres/: Cargo.toml
connectors/postgres/src/: lib.rs
connectors/s3/: Cargo.toml
connectors/s3/src/: lib.rs
connectors/slack/: Cargo.toml
connectors/slack/src/: lib.rs
connectors/slack/tests/: list_messages_e2e.rs
connectors/web/: Cargo.toml
connectors/web/src/: lib.rs
console/: README.md  (+6 more)
crates/cfg-cli/: Cargo.toml
crates/cfg-cli/src/: cli.rs  client.rs  commands.rs  main.rs  project.rs
crates/cfg-cli/src/commands/: compile.rs  connector.rs  dev.rs  init.rs  query.rs  receipt.rs  schema.rs  version.rs
crates/cfg-common/: Cargo.toml
crates/cfg-common/src/: lib.rs
crates/cfg-connector-sdk/: Cargo.toml
crates/cfg-connector-sdk/src/: lib.rs
crates/cfg-csl/: Cargo.toml
crates/cfg-csl/src/: ast.rs  error.rs  lib.rs
crates/cfg-csl/src/codegen/: mcp.rs  mod.rs  sql.rs
crates/cfg-csl/tests/fixtures/: hello.csl
crates/cfg-embedders/: Cargo.toml
crates/cfg-embedders/src/: lib.rs  openai.rs  stub.rs  voyage.rs
crates/cfg-gateway/: Cargo.toml
crates/cfg-gateway/src/: auth.rs  config.rs  lib.rs  rest.rs  server.rs
crates/cfg-gateway/src/mcp/: bootstrap.rs  handlers.rs  mod.rs  oauth.rs  protocol.rs  types.rs
crates/cfg-gateway/tests/: end_to_end.rs
crates/cfg-receipts/: Cargo.toml
crates/sealstack-api-types/: Cargo.toml  README.md
crates/sealstack-api-types/schemas/: ApplyDdlRequest.json  ApplyDdlResponse.json  ConnectorBindingWire.json  Envelope_QueryResponse.json  Envelope_RegisterSchemaResponse.json  ErrorCode.json  ErrorDetail.json  HealthStatus.json  HealthStatusKind.json  ListConnectorsResponse.json  ListSchemasResponse.json  QueryHit.json  QueryRequest.json  QueryResponse.json  ReceiptSource.json  ReceiptWire.json  RegisterConnectorRequest.json  RegisterConnectorResponse.json  RegisterSchemaRequest.json  RegisterSchemaResponse.json  SchemaMetaWire.json  SyncConnectorResponse.json
crates/sealstack-api-types/src/: connectors.rs  envelope.rs  health.rs  lib.rs  query.rs  receipts.rs  schemas.rs
crates/sealstack-cli/: Cargo.toml
crates/sealstack-cli/src/: cli.rs  client.rs  main.rs  project.rs
crates/sealstack-cli/src/commands/: compile.rs  connector.rs  dev.rs  init.rs  query.rs  receipt.rs  schema.rs  version.rs
crates/sealstack-connector-sdk/: Cargo.toml
crates/sealstack-connector-sdk/docs/: principal-mapping.md
crates/sealstack-connector-sdk/src/: auth.rs  change_streams.rs  http.rs  lib.rs  paginate.rs  principal.rs  retry.rs
crates/sealstack-connector-sdk/tests/: http_retry.rs  paginate_body_cursor.rs  paginate_link_header.rs  paginate_offset.rs
crates/sealstack-csl/: Cargo.toml
crates/sealstack-csl/assets/: policy_runtime.wasm
crates/sealstack-csl/src/: error.rs  lib.rs  parser.rs  types.rs
crates/sealstack-csl/src/codegen/: mcp.rs  mod.rs  policy.rs  python.rs  rust.rs  sql.rs  typescript.rs
crates/sealstack-csl/tests/: ir_snapshot.rs  python_emit_compiles.rs  python_emit_snapshot.rs  rust_emit_compiles.rs  rust_emit_snapshot.rs  typescript_emit_compiles.rs  typescript_emit_snapshot.rs  wasm_patching_prereq.rs  wasm_policy_patch.rs  wasm_policy_roundtrip.rs
crates/sealstack-csl/tests/fixtures/: python_keywords.csl  rust_shapes.csl
crates/sealstack-csl/tests/snapshots/: ir_snapshot__doc_read_ir.snap  python_emit_snapshot__hello.py.snap  python_emit_snapshot__python_keywords.py.snap  python_emit_snapshot__rust_shapes.py.snap  rust_emit_snapshot__rust_shapes.rs.snap  typescript_emit_snapshot__hello.ts.snap  typescript_emit_snapshot__rust_shapes.ts.snap
crates/sealstack-engine/: Cargo.toml
crates/sealstack-engine/migrations/: 20260101000000_init.sql  20260120000000_connector_columns.sql
crates/sealstack-engine/src/: api.rs  config.rs  engine.rs  facade.rs  freshness.rs  ingest.rs  lib.rs  policy.rs  receipts.rs  rerank.rs  retrieval.rs  schema_registry.rs  store.rs  util.rs
crates/sealstack-gateway/: Cargo.toml
crates/sealstack-gateway/src/: auth.rs  config.rs  lib.rs  policy.rs  rest.rs  server.rs
crates/sealstack-gateway/src/mcp/: bootstrap.rs  handlers.rs  mod.rs  oauth.rs  protocol.rs  registry.rs  transport.rs  types.rs
crates/sealstack-gateway/tests/: end_to_end.rs
crates/sealstack-ingest/: Cargo.toml
crates/sealstack-ingest/src/: chunkers.rs  lib.rs  registry.rs  runtime.rs  scheduler.rs
crates/sealstack-policy-cedar/: Cargo.toml
crates/sealstack-policy-cedar/src/: lib.rs
crates/sealstack-policy-ir/: Cargo.toml
crates/sealstack-policy-ir/src/: host.rs  lib.rs
crates/sealstack-policy-ir/tests/: host_interpreter.rs
crates/sealstack-policy-runtime/: Cargo.toml
crates/sealstack-policy-runtime/src/: interp.rs  json.rs  lib.rs
crates/sealstack-receipts/: Cargo.toml
crates/sealstack-receipts/src/: lib.rs
(+327 files in other folders)
