[workspace]
resolver = "3"
members = [
    "crates/sealstack-common",
    "crates/sealstack-csl",
    "crates/sealstack-engine",
    "crates/sealstack-gateway",
    "crates/sealstack-ingest",
    "crates/sealstack-connector-sdk",
    "crates/sealstack-embedders",
    "crates/sealstack-vectorstore",
    "crates/sealstack-receipts",
    "crates/sealstack-policy-ir",
    "crates/sealstack-policy-runtime",
    "crates/sealstack-cli",
    "connectors/local-files",
    "connectors/github",
    "connectors/slack",
]
default-members = ["crates/sealstack-cli"]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "Apache-2.0"
repository   = "https://github.com/bwiemz/sealstack"
authors      = ["SealStack Contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic                 = { level = "warn", priority = -1 }
nursery                  = { level = "warn", priority = -1 }
module_name_repetitions  = "allow"
missing_errors_doc       = "allow"

[workspace.dependencies]
# Core
tokio        = { version = "1.42", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum         = { version = "0.8", features = ["macros", "tracing"] }
tower        = "0.5"
tower-http   = { version = "0.6", features = ["trace", "cors", "compression-gzip", "timeout"] }
hyper        = "1.5"
async-trait  = "0.1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry     = "0.27"
opentelemetry_sdk = "0.27"
uuid  = { version = "1.11", features = ["v4", "v7", "serde"] }
ulid  = { version = "1.1", features = ["serde"] }
time  = { version = "0.3", features = ["serde", "parsing", "formatting"] }
dashmap = "6"
# DB + storage
sqlx          = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "time", "uuid"] }
qdrant-client = "1.12"
# Parser + codegen
winnow     = "0.6"
quote      = "1"
proc-macro2 = "1"
minijinja  = "2"
# Policy engine
wasmtime = "43"
# CLI
clap      = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
# Http client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# FS watching (local-files connector)
notify = "7"
# Testing
insta          = { version = "1.41", features = ["yaml"] }
testcontainers = "0.23"

tempfile = "3.14"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "debuginfo"

[profile.release.package.sealstack-policy-runtime]
opt-level     = "z"
codegen-units = 1
strip         = "debuginfo"
