[package]
name         = "signet-connector-github"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
signet-common        = { path = "../../crates/signet-common" }
signet-connector-sdk = { path = "../../crates/signet-connector-sdk" }
async-trait       = { workspace = true }
reqwest           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
time              = { workspace = true }
tokio             = { workspace = true }
tokio-stream      = { workspace = true }
tracing           = { workspace = true }
