[package]
name         = "sealstack-connector-local-files"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "SealStack connector for a local filesystem directory."

[lints]
workspace = true

[dependencies]
sealstack-common        = { path = "../../crates/sealstack-common" }
sealstack-connector-sdk = { path = "../../crates/sealstack-connector-sdk" }

async-trait = "0.1"
futures     = "0.3"
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
time        = { workspace = true }
tokio       = { workspace = true, features = ["fs", "macros", "rt", "sync", "time"] }
tracing     = { workspace = true }
walkdir     = "2.5"
notify      = { version = "8", optional = true }

[features]
default = ["watch"]
# Enables `subscribe()` via the `notify` crate for push-based updates on change.
watch   = ["dep:notify"]

[dev-dependencies]
tempfile = "3.13"
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
