[package]
name         = "sealstack-connector-postgres"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Postgres scrape connector for SealStack. Projects table rows into Resources."

[lints]
workspace = true

[dependencies]
sealstack-common        = { path = "../../crates/sealstack-common" }
sealstack-connector-sdk = { path = "../../crates/sealstack-connector-sdk" }
async-trait       = { workspace = true }
futures           = "0.3"
serde             = { workspace = true }
serde_json        = { workspace = true }
sqlx              = { workspace = true }
thiserror         = { workspace = true }
time              = { workspace = true }
tokio             = { workspace = true, features = ["full"] }
tracing           = { workspace = true }
