[package]
name         = "sealstack-connector-s3"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Amazon S3 connector for SealStack. Lists objects in a bucket prefix and emits each as a resource."

[lints]
workspace = true

[dependencies]
sealstack-common        = { path = "../../crates/sealstack-common" }
sealstack-connector-sdk = { path = "../../crates/sealstack-connector-sdk" }
async-trait       = { workspace = true }
aws-config        = "1.5"
aws-sdk-s3        = "1.59"
futures           = "0.3"
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
time              = { workspace = true }
tokio             = { workspace = true, features = ["full"] }
tracing           = { workspace = true }

[dev-dependencies]
tokio             = { workspace = true, features = ["full", "test-util"] }
