[package]
name         = "sealstack-connector-slack"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[dependencies]
sealstack-common        = { path = "../../crates/sealstack-common" }
sealstack-connector-sdk = { path = "../../crates/sealstack-connector-sdk" }
async-trait       = { workspace = true }
reqwest           = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
time              = { workspace = true }
tokio             = { workspace = true }
tokio-stream      = { workspace = true }
tracing           = { workspace = true }
