[package]
name         = "sealstack-connector-slack"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
wiremock  = "0.6"
tokio     = { workspace = true, features = ["full"] }
serde_json = { workspace = true }

[dependencies]
sealstack-common        = { path = "../../crates/sealstack-common" }
sealstack-connector-sdk = { path = "../../crates/sealstack-connector-sdk" }
async-trait       = { workspace = true }
futures           = "0.3"
serde             = { workspace = true }
serde_json        = { workspace = true }
thiserror         = { workspace = true }
time              = { workspace = true }
tokio             = { workspace = true }
tokio-stream      = { workspace = true }
tracing           = { workspace = true }
