[package]
name         = "cfg-common"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Shared types, errors, and identifiers used across ContextForge crates."

[lints]
workspace = true

[dependencies]
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror  = { workspace = true }
ulid       = { workspace = true, features = ["serde"] }
time       = { workspace = true, features = ["serde", "formatting", "parsing"] }
