[package]
name         = "cfg-gateway"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "MCP, REST, and OAuth gateway for ContextForge."

[lints]
workspace = true

[[bin]]
name = "cfg-gateway"
path = "src/bin/server.rs"

[dependencies]
tokio           = { workspace = true }
axum            = { workspace = true }
tower           = { workspace = true }
tower-http      = { workspace = true }
hyper           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
anyhow          = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
uuid            = { workspace = true }
ulid            = { workspace = true }
time            = { workspace = true }
async-trait     = "0.1"
dashmap         = "6"
futures         = "0.3"
jsonwebtoken    = "9.2"
reqwest         = { workspace = true }
# Internal crates
cfg-common                  = { path = "../cfg-common" }
cfg-csl                     = { path = "../cfg-csl" }
cfg-engine                  = { path = "../cfg-engine", features = ["reranker", "wasm-policy"] }
cfg-vectorstore             = { path = "../cfg-vectorstore", features = ["qdrant"] }
cfg-embedders               = { path = "../cfg-embedders", features = ["stub", "openai", "voyage"] }
cfg-connector-sdk           = { path = "../cfg-connector-sdk" }
cfg-ingest                  = { path = "../cfg-ingest" }
cfg-connector-local-files   = { path = "../../connectors/local-files" }
cfg-connector-github        = { path = "../../connectors/github" }
cfg-connector-slack         = { path = "../../connectors/slack" }

[dev-dependencies]
tokio           = { workspace = true, features = ["macros", "rt-multi-thread"] }
reqwest         = { workspace = true }
tempfile        = { workspace = true }
serde_json      = { workspace = true }
tower           = { workspace = true, features = ["util"] }
axum            = { workspace = true }
http-body-util  = "0.1"

[features]
default      = []
# Compile in the StubEngineFacade for integration tests of the gateway alone.
stub-engine  = []
