[package]
name         = "sealstack-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "SealStack command-line interface."

[lints]
workspace = true

[[bin]]
name = "sealstack"
path = "src/main.rs"

[dependencies]
sealstack-common = { path = "../sealstack-common" }
sealstack-csl    = { path = "../sealstack-csl" }

clap    = { workspace = true }
anyhow  = { workspace = true }
tokio   = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "process", "time"] }
reqwest = { workspace = true, features = ["json"] }
serde   = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml    = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time    = { workspace = true, features = ["serde", "formatting"] }

[dev-dependencies]
tempfile = "3.13"
tokio    = { workspace = true, features = ["macros", "rt-multi-thread"] }
