[package]
name         = "sealstack-csl"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Context Schema Language parser, type checker, and code generator."

[lints]
workspace = true

[dependencies]
thiserror       = { workspace = true }
anyhow          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }
winnow          = { workspace = true }
indexmap        = { version = "2", features = ["serde"] }
miette          = { version = "7", features = ["fancy"] }
bitflags        = "2"
sealstack-policy-ir = { path = "../sealstack-policy-ir", features = ["host"] }
wat             = "1"
wasmparser      = "0.247"

[dev-dependencies]
insta           = { workspace = true }
pretty_assertions = "1"
tempfile       = { workspace = true }
wasmtime       = { workspace = true }

[features]
slow-tests = []
