[package]
name         = "sealstack-engine"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "SealStack retrieval, ingestion, and policy engine."

[lints]
workspace = true

[dependencies]
# Internal crates — resolve via the workspace path after drop-in.
sealstack-common        = { path = "../sealstack-common" }
sealstack-vectorstore   = { path = "../sealstack-vectorstore" }
sealstack-embedders     = { path = "../sealstack-embedders" }
sealstack-connector-sdk = { path = "../sealstack-connector-sdk" }

# Core async / error handling
tokio       = { workspace = true, features = ["full"] }
async-trait = "0.1"
thiserror   = { workspace = true }
anyhow      = { workspace = true }

# Serde stack
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }

# Identifiers and time
ulid        = { workspace = true }
time        = { workspace = true }

# Database
sqlx        = { workspace = true, features = ["postgres", "uuid", "time", "json", "migrate", "runtime-tokio-rustls"] }

# Observability
tracing     = { workspace = true }

# Hashing for receipts / dedup
blake3      = "1.8"

# Optional reranker HTTP client
reqwest     = { workspace = true, optional = true }

# Policy VM
wasmtime    = { workspace = true, optional = true }

# Concurrent data structures
dashmap     = "6.1"

# Utility
futures     = "0.3"

[dev-dependencies]
insta        = { workspace = true }
tokio        = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
proptest     = "1.5"
tempfile     = { workspace = true }
wat          = "1"

[features]
default  = []
reranker = ["dep:reqwest"]
wasm-policy = ["dep:wasmtime"]
